--- a/file1.html
+++ b/file1.html
@@ -1,1 +1,8 @@
-<h1>Sharda Waghmare</h1>
+<html>
+    <head>
+        <link rel="stylesheet" href="file1.css">
+    </head>
+    <body>
+        <h1>Sharda Waghmare</h1>
+    </body>
+</html>
