--- a/file1.html
+++ b/file1.html
@@ -3,6 +3,6 @@
         <link rel="stylesheet" href="file1.css">
     </head>
     <body>
-        <h1>Sharda Waghmare</h1>
+        <h1 class="h1">Sharda Waghmare</h1>
     </body>
 </html>
