background colour yellow

--- a/file1.html
+++ b/file1.html
@@ -1,2 +1,10 @@
-<h1>Sharda Waghmare</h1>
-<h2>psk technologies</h2>
+
+<html>
+    <head>
+       <link rel="stylesheet" type="text/css" href="file1.css" > 
+    </head>
+    <body>
+        <h1 class="h1">Sharda Waghmare</h1>
+        <h2>psk technologies</h2>
+    </body>
+</html>
